# agentflow

./: Cargo.toml  README.md
examples/: clock_task_example.rs  local_audio_example.rs
src/: frames.rs  lib.rs  processors.rs  task_manager.rs  transport.rs
src/audio/: mixer.rs  mod.rs  utils.rs
src/audio/filter/: base.rs  mod.rs
src/audio/mixer/: base.rs  mod.rs  soundfile.rs
src/audio/resampler/: base.rs  mod.rs  rubato.rs
src/clock/: base.rs  mod.rs  system.rs
src/pipeline/: base.rs  mod.rs  pipeline.rs  sink.rs  source.rs
src/processors/: frame.rs  frame_processor.rs  mod.rs
src/transport/: base.rs  input.rs  media_sender.rs  mod.rs  output.rs  params.rs  sender.rs
src/transport/local/: input.rs  mod.rs  output.rs  params.rs  transport.rs
