[package]
name = "agentflow"
version = "0.1.0"
edition = "2021"
description = "An AI agent flow framework built with Rust and actors, inspired by Pipecat"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orhanbalci/agentflow"
keywords = ["ai", "agents", "pipeline", "actors", "llm"]
categories = ["multimedia", "web-programming", "concurrency"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "time", "sync", "rt-multi-thread"] }
uuid = { version = "1.18.0", features = ["v4"] }
async-trait = "0.1"
log = "0.4"
tracing = "0.1"
thiserror = "1.0"
hound = "3.5"
rubato = "0.15"
bytemuck = "1.0"
delegate = "0.13.4"
image = "0.24"

